--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "novel": "^0.5.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slugify": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
